--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.0.2",
     "express": "^4.17.3",
     "mongoose": "^6.2.8",
+    "multer": "^1.4.5-lts.1",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
